add admin dashboard page

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.9.3",
+    "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.9.3",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mantine/carousel": "^5.1.6",
+    "@mantine/core": "^5.1.6",
+    "@mantine/hooks": "^5.1.6",
+    "@mantine/modals": "^5.1.6",
+    "@mantine/rte": "^5.1.6",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.0",
     "@mui/x-data-grid": "^5.15.1",
@@ -17,12 +22,17 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.2",
+    "embla-carousel-react": "^7.0.0",
     "formik": "^2.2.9",
     "formik-mui": "^5.0.0-alpha.0",
     "nuka-carousel": "^5.2.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-material-ui-carousel": "^3.4.2",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-stripe-checkout": "^2.6.3",
